libs/preprocessor/tests/errors/pe9_function_call_argument_count/source.hpp
#define HELLO(var) Hello var

HELLO(world, aceteam)
